objects/copado__Git_Repository__c.object
<CustomObject>
    <fields>
        <fullName>copado__Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__URI__c</fullName>
        <label>URI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>